[package]
name = "argmin"
version = "0.4.7"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Mathematical optimization in pure Rust"
documentation = "https://docs.rs/argmin/"
homepage = "http://argmin-rs.org"
repository = "https://github.com/argmin-rs/argmin"
readme = "README.md"
keywords = ["optimization", "math", "science"]
categories = ["science"]
exclude = [
    ".travis.yml",
    "push_docs",
]

[dependencies]
anyhow = "1.0"
approx = "0.5.0"
bincode = "1.1.4"
ctrlc = { version = "3.1.2", optional = true }
instant = {version = "0.1", features = ["now"] }
gnuplot = { version = "0.0.37", optional = true}
paste = "1.0.0"
nalgebra = { version = "0.29.0", optional = true, features = ["serde-serialize"] }
ndarray = { version = "0.15", optional = true, features = ["serde-1"] }
ndarray-linalg = { version = "0.14", optional = true }
ndarray-rand = {version = "0.14.0", optional = true }
num = { version = "0.4" }
num-complex = "0.4"
rand = { version = "0.8.3", features = ["serde1"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
slog = { version = "2.4.1", optional = true }
slog-term = { version = "2.4.0", optional = true }
slog-async = { version = "2.3.0", optional = true }
slog-json = { version = "2.3.0", optional = true }
thiserror = "1.0"

[dev-dependencies]
ndarray-linalg = { version = "0.14", features = ["openblas"] }
finitediff = { version = "0.1.4", features = ["ndarray"] }
argmin_testfunctions = "0.1.1"
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
rayon = "1.5.1"

[features]
default = ["slog-logger"]
nalgebral = ["nalgebra"]
ndarrayl = ["ndarray", "ndarray-linalg", "ndarray-rand"]
visualizer = ["gnuplot"]
wasm-bindgen = ["instant/wasm-bindgen"]
slog-logger = ["slog", "slog-term", "slog-async", "slog-json"]
stdweb = ["instant/stdweb"]

[badges]
maintenance = { status = "actively-developed" }
