[package]
name = "argmin"
version = "0.5.1"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Mathematical optimization in pure Rust"
documentation = "https://docs.rs/argmin/"
homepage = "http://argmin-rs.org"
repository = "https://github.com/argmin-rs/argmin"
readme = "README.md"
keywords = ["optimization", "math", "science"]
categories = ["science"]
exclude = [
    ".travis.yml",
    "push_docs",
]

[dependencies]
anyhow = "1.0"
approx = "0.5.0"
bincode = "1.1.4"
ctrlc = { version = "3.1.2", optional = true }
instant = {version = "0.1", features = ["now"] }
gnuplot = { version = "0.0.37", optional = true }
getrandom = { version = "0.2", features = ["js"] }
paste = "1.0.0"
nalgebra = { version = "0.30.0", optional = true, features = ["serde-serialize"] }
ndarray = { version = "0.15", optional = true, features = ["serde-1"] }
ndarray-linalg = { version = "0.14", optional = true }
ndarray-rand = {version = "0.14.0", optional = true }
num = { version = "0.4" }
num-complex = { version = "0.4" }
rand = { version = "0.8.3", features = ["serde1"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
slog = { version = "2.4.1", optional = true }
slog-term = { version = "2.4.0", optional = true }
slog-async = { version = "2.3.0", optional = true }
slog-json = { version = "2.3.0", optional = true }
thiserror = "1.0"

[dev-dependencies]
ndarray-linalg = { version = "0.14", features = ["netlib"] }
finitediff = { version = "0.1.4", features = ["ndarray"] }
argmin_testfunctions = "0.1.1"
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }

[features]
default = ["slog-logger"]
nalgebral = ["nalgebra"]
ndarrayl = ["ndarray", "ndarray-linalg", "ndarray-rand"]
visualizer = ["gnuplot"]
wasm-bindgen = ["instant/wasm-bindgen"]
slog-logger = ["slog", "slog-term", "slog-async", "slog-json"]
stdweb = ["instant/stdweb"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "backtracking"
required-features = []

[[example]]
name = "bfgs"
required-features = ["ndarrayl"]

[[example]]
name = "brent"
required-features = []

[[example]]
name = "checkpoint"
required-features = []

[[example]]
name = "conjugategradient"
required-features = []

[[example]]
name = "dfp"
required-features = ["ndarrayl"]

[[example]]
name = "gaussnewton"
required-features = ["ndarrayl"]

[[example]]
name = "gaussnewton_linesearch"
required-features = ["ndarrayl"]

[[example]]
name = "gaussnewton_nalgebra"
required-features = ["nalgebral"]

[[example]]
name = "goldensectionsearch"
required-features = []

[[example]]
name = "hagerzhang"
required-features = []

[[example]]
name = "landweber"
required-features = []

[[example]]
name = "lbfgs"
required-features = ["ndarrayl"]

[[example]]
name = "morethuente"
required-features = []

[[example]]
name = "neldermead"
required-features = ["ndarrayl"]

[[example]]
name = "newton"
required-features = ["ndarrayl"]

[[example]]
name = "newton_cg"
required-features = ["ndarrayl"]

[[example]]
name = "nonlinear_cg"
required-features = []

[[example]]
name = "particleswarm"
required-features = []

[[example]]
name = "simulatedannealing"
required-features = []

[[example]]
name = "sr1"
required-features = ["ndarrayl"]

[[example]]
name = "sr1_trustregion"
required-features = ["ndarrayl"]

[[example]]
name = "steepestdescent"
required-features = []

[[example]]
name = "trustregion_nd"
required-features = ["ndarrayl"]

[[example]]
name = "writers"
required-features = ["ndarrayl"]
