[package]
name = "argmin"
version = "0.9.0"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Mathematical optimization in pure Rust"
documentation = "https://docs.rs/argmin/"
homepage = "https://argmin-rs.org"
repository = "https://github.com/argmin-rs/argmin"
readme = "../README.md"
keywords = ["optimization", "math", "science"]
categories = ["science"]
exclude = []

[dependencies]
# Required
anyhow = "1.0"
instant = {version = "0.1" }
paste = "1"
num-traits = { version = "0.2" }
rand = { version = "0.8.5" }
rand_xoshiro = { version = "0.6.0" }
thiserror = "1.0"
argmin-math = { path = "../argmin-math", version = "0.3", default-features = false, features = ["primitives"] }
# optional
bincode = { version = "1.3.3", optional = true }
ctrlc = { version = "3.2.4", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
gnuplot = { version = "0.0.39", optional = true }
rayon = { version = "1.6.0", optional = true }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }

[dev-dependencies]
approx = "0.5.0"
finitediff = { version = "0.1.4", features = ["ndarray"] }
argmin_testfunctions = "0.1.1"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
ndarray = { version = "0.15", features = ["serde-1"] }
ndarray-linalg = { version = "0.16", features = ["netlib"] }
argmin-math = { path = "../argmin-math" }
serde = { version = "1.0", features = ["derive", "rc"] }
argmin-observer-slog = { path = "../observers/slog" }
argmin-observer-paramwriter = { path = "../observers/paramwriter" }

[features]
default = ["serde1"]
wasm-bindgen = ["instant/wasm-bindgen", "getrandom/js"]
serde1 = ["serde", "rand/serde1", "bincode", "rand_xoshiro/serde1", "argmin-observer-slog/serde1"]
_ndarrayl = ["argmin-math/ndarray_latest-serde", "argmin-math/_dev_linalg_latest"]
_nalgebral = ["argmin-math/nalgebra_latest-serde"]
# When adding new features, please consider adding them to either `full` (for users)
# or `_full_dev` (only for local development, tesing and computing test coverage).
full = ["default", "serde1", "ctrlc"]
_full_dev = ["full", "_ndarrayl", "_nalgebral", "argmin-observer-slog/serde1"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
features = ["serde1"]

[[example]]
name = "backtracking"
required-features = []

[[example]]
name = "bfgs"
required-features = ["argmin-math/ndarray_latest-serde"]

[[example]]
name = "brentroot"
required-features = []

[[example]]
name = "brentopt"
required-features = []

[[example]]
name = "checkpoint"
required-features = ["serde1"]

[[example]]
name = "conjugategradient"
required-features = []

[[example]]
name = "dfp"
required-features = ["argmin-math/ndarray_latest-serde"]

[[example]]
name = "gaussnewton"
required-features = ["argmin-math/ndarray_latest-serde"]

[[example]]
name = "gaussnewton_linesearch"
required-features = ["argmin-math/ndarray_latest-serde"]

[[example]]
name = "gaussnewton_nalgebra"
required-features = ["_nalgebral", "argmin-math/nalgebra_latest-serde"]

[[example]]
name = "goldensectionsearch"
required-features = []

[[example]]
name = "hagerzhang"
required-features = []

[[example]]
name = "landweber"
required-features = []

[[example]]
name = "lbfgs"
required-features = ["argmin-math/ndarray_latest-serde"]

[[example]]
name = "lbfgs_nalgebra"
required-features = ["argmin-math/ndarray_latest-serde"]

[[example]]
name = "morethuente"
required-features = []

[[example]]
name = "neldermead-cubic"
required-features = ["slog-logger"]

[[example]]
name = "neldermead"
required-features = ["argmin-math/ndarray_latest-serde"]

[[example]]
name = "newton"
required-features = ["argmin-math/ndarray_latest-serde"]

[[example]]
name = "newton_cg"
required-features = ["argmin-math/ndarray_latest-serde"]

[[example]]
name = "nonlinear_cg"
required-features = []

[[example]]
name = "observer"
required-features = ["gnuplot"]

[[example]]
name = "owl_qn"
required-features = ["argmin-math/ndarray_latest-serde"]

[[example]]
name = "particleswarm"
required-features = []

[[example]]
name = "particleswarm_nalgebra"
required-features = ["argmin-math/nalgebra_latest-serde"]

[[example]]
name = "simulatedannealing"
required-features = []

[[example]]
name = "sr1"
required-features = ["argmin-math/nalgebra_latest-serde"]

[[example]]
name = "sr1_trustregion"
required-features = ["argmin-math/nalgebra_latest-serde"]

[[example]]
name = "steepestdescent"
required-features = []

[[example]]
name = "steepestdescent_manifold"
required-features = ["slog-logger"]

[[example]]
name = "trustregion_nd"
required-features = ["argmin-math/nalgebra_latest-serde"]

[[example]]
name = "writers"
required-features = ["argmin-math/ndarray_latest-serde", "serde1"]
