[package]
name = "argmin"
version = "0.8.1"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Mathematical optimization in pure Rust"
documentation = "https://docs.rs/argmin/"
homepage = "https://argmin-rs.org"
repository = "https://github.com/argmin-rs/argmin"
readme = "../README.md"
keywords = ["optimization", "math", "science"]
categories = ["science"]
exclude = []

[dependencies]
# Required
anyhow = "1.0"
instant = {version = "0.1" }
paste = "1"
num-traits = { version = "0.2" }
rand = { version = "0.8.5" }
rand_xoshiro = { version = "0.6.0" }
thiserror = "1.0"
argmin-math = { path = "../argmin-math", version = "0.3", default-features = false, features = ["primitives"] }
# optional
bincode = { version = "1.3.3", optional = true }
ctrlc = { version = "3.2.4", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
gnuplot = { version = "0.0.37", optional = true }
rayon = { version = "1.6.0", optional = true }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0", optional = true }
slog = { version = "2.7", optional = true, features = ["dynamic-keys"] }
slog-term = { version = "2.9", optional = true }
slog-async = { version = "2.7", optional = true }
slog-json = { version = "2.6", optional = true }

[dev-dependencies]
approx = "0.5.0"
finitediff = { version = "0.1.4", features = ["ndarray"] }
argmin_testfunctions = "0.1.1"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
ndarray = { version = "0.15", features = ["serde-1"] }
ndarray-linalg = { version = "0.16", features = ["netlib"] }
argmin-math = { path = "../argmin-math" }
serde = { version = "1.0", features = ["derive", "rc"] }
criterion = { version = "0.4", features = ["html_reports"] }

[features]
default = ["slog-logger", "serde1"]
wasm-bindgen = ["instant/wasm-bindgen", "getrandom/js"]
slog-logger = ["slog", "slog-term", "slog-async"]
serde1 = ["serde", "serde_json", "rand/serde1", "bincode", "slog-json", "rand_xoshiro/serde1"]
_ndarrayl = ["argmin-math/ndarray_latest-serde", "argmin-math/_dev_linalg_latest"]
_nalgebral = ["argmin-math/nalgebra_latest-serde"]
# When adding new features, please consider adding them to either `full` (for users)
# or `_full_dev` (only for local development, tesing and computing test coverage).
full = ["default", "slog-logger", "serde1", "ctrlc"]
_full_dev = ["full", "_ndarrayl", "_nalgebral"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
features = ["slog-logger", "serde1"]

[[example]]
name = "backtracking"
required-features = ["slog-logger"]

[[example]]
name = "bfgs"
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[example]]
name = "brentroot"
required-features = ["slog-logger"]

[[example]]
name = "brentopt"
required-features = ["slog-logger"]

[[example]]
name = "checkpoint"
required-features = ["serde1", "slog-logger"]

[[example]]
name = "conjugategradient"
required-features = ["slog-logger"]

[[example]]
name = "dfp"
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[example]]
name = "gaussnewton"
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[example]]
name = "gaussnewton_linesearch"
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[example]]
name = "gaussnewton_nalgebra"
required-features = ["_nalgebral", "argmin-math/nalgebra_latest-serde", "slog-logger"]

[[example]]
name = "goldensectionsearch"
required-features = ["slog-logger"]

[[example]]
name = "hagerzhang"
required-features = ["slog-logger"]

[[example]]
name = "landweber"
required-features = ["slog-logger"]

[[example]]
name = "lbfgs"
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[example]]
name = "lbfgs_nalgebra"
required-features = ["argmin-math/nalgebra_latest-serde", "slog-logger"]

[[example]]
name = "morethuente"
required-features = ["slog-logger"]

[[example]]
name = "neldermead"
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[example]]
name = "newton"
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[example]]
name = "newton_cg"
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[example]]
name = "nonlinear_cg"
required-features = ["slog-logger"]

[[example]]
name = "observer"
required-features = ["slog-logger", "gnuplot"]

[[example]]
name = "owl_qn"
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[example]]
name = "particleswarm"
required-features = []

[[example]]
name = "particleswarm_nalgebra"
required-features = ["argmin-math/nalgebra_latest-serde"]

[[example]]
name = "simulatedannealing"
required-features = ["slog-logger"]

[[example]]
name = "sr1"
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[example]]
name = "sr1_trustregion"
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[example]]
name = "steepestdescent"
required-features = ["slog-logger"]

[[example]]
name = "trustregion_nd"
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[example]]
name = "writers"
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger", "serde1"]

[[bench]]
name = "backtracking"
harness = false
required-features = ["slog-logger"]

[[bench]]
name = "bfgs"
harness = false
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[bench]]
name = "brentroot"
harness = false
required-features = ["slog-logger"]

[[bench]]
name = "brentopt"
harness = false
required-features = ["slog-logger"]

[[bench]]
name = "conjugategradient"
harness = false
required-features = ["slog-logger"]

[[bench]]
name = "dfp"
harness = false
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[bench]]
name = "gaussnewton"
harness = false
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[bench]]
name = "gaussnewton_linesearch"
harness = false
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[bench]]
name = "gaussnewton_nalgebra"
harness = false
required-features = ["_nalgebral", "argmin-math/nalgebra_latest-serde", "slog-logger"]

[[bench]]
name = "goldensectionsearch"
harness = false
required-features = ["slog-logger"]

[[bench]]
name = "hagerzhang"
harness = false
required-features = ["slog-logger"]

[[bench]]
name = "landweber"
harness = false
required-features = ["slog-logger"]

[[bench]]
name = "lbfgs"
harness = false
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[bench]]
name = "lbfgs_nalgebra"
harness = false
required-features = ["argmin-math/nalgebra_latest-serde", "slog-logger"]

[[bench]]
name = "morethuente"
harness = false
required-features = ["slog-logger"]

[[bench]]
name = "neldermead"
harness = false
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[bench]]
name = "newton"
harness = false
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[bench]]
name = "newton_cg"
harness = false
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[bench]]
name = "nonlinear_cg"
harness = false
required-features = ["slog-logger"]

[[bench]]
name = "owl_qn"
harness = false
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[bench]]
name = "particleswarm"
harness = false
required-features = []

[[bench]]
name = "particleswarm_nalgebra"
harness = false
required-features = ["argmin-math/nalgebra_latest-serde"]

[[bench]]
name = "simulatedannealing"
harness = false
required-features = ["slog-logger"]

[[bench]]
name = "sr1"
harness = false
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]

[[bench]]
name = "sr1_trustregion"
harness = false
required-features = ["argmin-math/ndarray_latest-serde", "slog-loger"]

[[bench]]
name = "steepestdescent"
harness = false
required-features = ["slog-logger"]

[[bench]]
name = "trustregion_nd"
harness = false
required-features = ["argmin-math/ndarray_latest-serde", "slog-logger"]
