[package]
name = "argmin-observer-paramwriter"
version = "0.1.0"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "argmin observer which writes parameters to disk"
documentation = "https://docs.rs/argmin-observer-paramwriter/"
homepage = "https://argmin-rs.org"
repository = "https://github.com/argmin-rs/argmin"
readme = "README.md"
keywords = ["optimization", "math", "science"]
categories = ["science"]
exclude = []

[dependencies]
argmin = { version = "0.10.0", path = "../argmin", default-features = false }
bincode = { version = "1.3" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }

[dev-dependencies]
argmin-math = { path = "../argmin-math", features = ["vec"] }
argmin_testfunctions = { path = "../argmin-testfunctions" }
